# PyInquirer

./: CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
PyInquirer/: __init__.py  prompt.py
PyInquirer/prompts/: checkbox.py  confirm.py  editor.py  expand.py  input.py  list.py  password.py
examples/: editor.py  expand.py
tests/: conftest.py  helpers.py  test_smoke.py
